--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -21,6 +21,6 @@
     string in this file.
     -->
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
-        AIzaSyBj1FWKj6BN_vTFVUkf6RmYK1RQm2_pYPA
+        hgjjjhjkhkjkljh
     </string>
 </resources>
