--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,53 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardUseCompatPadding="true"
+    android:orientation="horizontal"
     app:cardCornerRadius="5dp"
+    app:cardUseCompatPadding="true"
     app:contentPadding="5dp">
+
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
         android:id="@+id/ll_main"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <com.facebook.drawee.view.SimpleDraweeView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:actualImageScaleType="fitXY"
             android:id="@+id/sdPoster"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            app:roundedCornerRadius="2dp"
+            app:actualImageScaleType="fitXY"></com.facebook.drawee.view.SimpleDraweeView>
 
-
-            ></com.facebook.drawee.view.SimpleDraweeView>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_gravity="center"
-            >
+            android:layout_weight="1"
+            android:orientation="vertical">
+
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
                 android:id="@+id/tvTitle"
-                android:textColor="#0F0F0F"
-                android:textSize="18sp"
-
-                ></TextView>
-            <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:id="@+id/tvyear"
-                android:textSize="12sp"
+                android:textColor="#0F0F0F"
+                android:textSize="18sp"></TextView>
 
-                ></TextView>
+            <androidx.appcompat.widget.AppCompatRatingBar
+                android:id="@+id/ratingBarYourRating"
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:isIndicator="true"
+                android:max="5"
+                android:numStars="5"
+                android:stepSize="0.5" />
+
 
         </LinearLayout>
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdPoster2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="5dp"
+            app:roundedCornerRadius="2dp"
+            app:actualImageScaleType="fitXY">
+
+        </com.facebook.drawee.view.SimpleDraweeView>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
